--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"npm server/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alejandro Lafourcade Despaigne",
