--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node server/server",
+    "start": "node server/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alejandro Lafourcade Despaigne",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^2.0.0",
     "body-parser": "^1.18.2",
-    "express": "^4.16.3"
+    "colors": "^1.2.1",
+    "express": "^4.16.3",
+    "install": "^0.11.0",
+    "mongoose": "^5.0.14",
+    "mongoose-unique-validator": "^2.0.0",
+    "underscore": "^1.8.3"
   }
 }
