--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "colors": "^1.2.1",
     "express": "^4.16.3",
     "install": "^0.11.0",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.14",
     "mongoose-unique-validator": "^2.0.0",
     "underscore": "^1.8.3"
