--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.2",
     "colors": "^1.2.1",
     "express": "^4.16.3",
+    "google-auth-library": "^1.4.0",
     "install": "^0.11.0",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.14",
